--- a/public_html/css/admin.css
+++ b/public_html/css/admin.css
@@ -253,7 +253,8 @@ input:not(:disabled):hover, select:not(:disabled):hover, textarea:not(:disabled)
    border-radius: 0.2rem;
 }
 
-.userformLabels {
+.userformLabels,
+.carformLabels {
     display: block;
     margin-top: 0.5rem;
     margin-left: 6rem;
@@ -448,6 +449,7 @@ margin-top: 0rem;
 
 #addButton,
 #adduserButton{
+
     border: 1px solid #f5f5f5;
     background-color: #00000063;
     backdrop-filter: blur(1px);
