editing in admin and footer css

--- a/public_html/css/admin.css
+++ b/public_html/css/admin.css
@@ -35,8 +35,11 @@ html {
 .welcom-admin{
 margin-top: 3%;
 color: #30bbe6;
-font-size: 40px;
+font-size: 50px;
 margin-left: 37%;
+/* font-family: var( --header_font);  */
+/* font-family: var( --racing_font); */
+font-family: var(  --technoRace_font);
 }
 
 .card-container {
@@ -64,10 +67,10 @@ margin-left: 37%;
 }
 
 .card:hover {
-    transform: translateY(-5px); 
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3); 
-    background: rgba(38, 38, 41, 0.3); 
-    backdrop-filter: blur(15px); 
+    transform: translateY(-5px);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+    background: rgba(38, 38, 41, 0.3);
+    backdrop-filter: blur(15px);
 }
 
 .card-icon {
@@ -80,7 +83,7 @@ margin-left: 37%;
 .card-content h3 {
     font-size: 20px;
     margin: 10px 0;
-    color: #666;
+    color: #dfe4e6;
 }
 
 
@@ -166,6 +169,7 @@ background-image: url('../media/admin-icon2.png');
   margin-left: 1.2rem;
   margin-top: 0.5rem;
 } */
+
 /*=========== Big container==================== */
 .content {
     margin-top: 4.5rem;
@@ -217,6 +221,7 @@ background-image: url('../media/admin-icon2.png');
     overflow-y: auto;
     /* Enables vertical scrolling if the content exceeds the container height */
     overflow-x: hidden;
+    color: #f7f7ff;
     /* Prevent horizontal scrolling */
 }
 
@@ -226,8 +231,8 @@ background-image: url('../media/admin-icon2.png');
     border-radius: 0.3rem;
     margin: 1rem 1rem 1rem 3rem;
     padding: 10px 10px;
-    background-color: #000000c1;
-    backdrop-filter: blur(6px);
+    background-color:  #0000006c;
+    backdrop-filter: blur(25px);
     box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.534);
     width: calc(33.333% - 5rem);
     /* Ensure the div width adjusts correctly */
@@ -235,6 +240,7 @@ background-image: url('../media/admin-icon2.png');
     /* Allow height to adjust based on content */
     min-height: 200px;
     /* You can set a min-height if needed */
+
 }
 
 .viewsChart,
@@ -243,6 +249,7 @@ background-image: url('../media/admin-icon2.png');
 .personasChart {
     width: 60%;
     height: 60%;
+    
 }
 
 .stat-title {
@@ -307,7 +314,7 @@ input:not(:disabled):hover, select:not(:disabled):hover, textarea:not(:disabled)
    flex-direction: column;
    justify-content: center;
 
-   background: linear-gradient(160deg, #000000a2, #0a0e47ad, #0a0e47ad, #000000a2);
+   background:#000000bc ;
    backdrop-filter: blur(1px);
    border-radius: 0.2rem;
 }
@@ -354,7 +361,7 @@ select {
 
 
 #userSelect{
-    border: 2px solid #10c295;
+    border: 1px solid #00ffff;
 
     background-color: #949494a4;
 
@@ -375,7 +382,7 @@ color: white;
   margin-left: 3rem;
 
     padding: 0rem 0rem 0rem 0rem;
-    background: linear-gradient(160deg, #000000a2, #0a0e47ad, #0a0e47ad, #000000a2);
+    background:#000000bc;
     backdrop-filter: blur(1px);
     border-radius: 0.2rem;
     box-shadow: 9px 8px 5px rgba(14, 14, 14, 0.582);
@@ -416,27 +423,26 @@ margin-top: 0rem;
 .controlPanel_text {
     font-family: var(--technoRace_font);
     font-weight: 100;
-    color: rgb(112, 112, 112);
-
-    margin-left: 4.7rem;
-    margin-top: 0.5rem;
+    color: rgb(199, 205, 206);
+    /* margin-left: 4.7rem; */
+    margin-top: 1rem;
     font-size: 1.6rem;
     margin-left: 6.5rem;
-    text-shadow: 2px 2px 5px rgba(0, 255, 242, 0.281);
+    text-shadow: 2px 2px 5px #147baa;
 
 }
 
 
 .button {
     position: relative;
-    border-radius: 6px;
+    border-radius: 50px;
     width: 150px;
     height: 40px;
     cursor: pointer;
     display: flex;
     align-items: center;
-    border: 1px solid #cc0000;
-    background-color: #e50000;
+    /* border: 1px solid #cc0000;
+    background-color: #e50000; */
     overflow: hidden;
   }
 
@@ -467,9 +473,9 @@ margin-top: 0rem;
     width: 20px;
   }
 
-  .button:hover {
+  /* .button:hover {
     background: #cc0000;
-  }
+  } */
 
   .button:hover .button__text {
     color: transparent;
@@ -481,7 +487,7 @@ margin-top: 0rem;
   }
 
   .button:active .button__icon {
-    background-color: #b20000;
+    background-color: #0a8d33;
   }
 
   .button:active {
@@ -491,31 +497,33 @@ margin-top: 0rem;
 #editButton{
     color: #fff;
 
-    border: 2px solid #10c295;
-    background-color: #35363bb7;
+    border: 2px solid #f5f5f5;
+    background-color: #4194bb;
     backdrop-filter: blur(1px);
 
 }
 #saveButton{
-    border: 1px solid #f5f5f5;
-    background:linear-gradient(160deg, #189282a4, #04f8d0a8, #04f8d0a8, #189282a4);
+    border: 2px solid #4194bb;
+    background-color: #505157b7;
     backdrop-filter: blur(1px);
     color: #ffffffee;
 }
 
 
 
-
 #addButton,
 #adduserButton{
 
-    border: 1px solid #f5f5f5;
-    background-color: #00000063;
+    border: 2px solid #f5f5f5;
+    background-color: #4194bb;
     backdrop-filter: blur(1px);
     color: #fff;
 }
+
+
+
 #deleteButton{
-    border: 1px solid #f5f5f5;
+    border: 2px solid #f5f5f5;
     background-color: #dd0707bb;
     backdrop-filter: blur(1px);
     color: #fff;
@@ -524,6 +532,11 @@ margin-top: 0rem;
     box-shadow: 0px 0px 10px   rgba(255, 0, 0, 0.849);
     background:linear-gradient(160deg, #770a0af6, #ff0000d0, #ff0000ad, #770a0af6);
 }
+
+#deleteButton:active .button__icon {
+    background-color: #dd0707bb;
+  }
+
 
 .input-error {
     border-bottom: 1px solid red;
@@ -614,3 +627,12 @@ text-shadow: 5px 5px 15px rgb(133, 15, 15);
         transform: translateY(-15px);
     }
 } */
+
+
+.logout-tire{
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-left: 40%;
+    margin-top: 5%;
+}
