--- a/public_html/css/landing_page.css
+++ b/public_html/css/landing_page.css
@@ -290,6 +290,16 @@ body {
   font-weight: 100;
 }
 
+.rating {
+  font-size: 35px;
+  color: #ccc;
+  margin-top: 50px;
+}
+
+.rating.filled {
+  color: gold;
+}
+
 .swiper-slide-active {
   transform: scale(1.2);
   transition: transform 0.5s ease-in-out;
@@ -308,6 +318,7 @@ body {
   color: var(--white);
   margin-top: 50px;
   margin-left: 60px;
+  margin-bottom: 50px;
   word-wrap: break-word;
   white-space: pre-wrap;
   max-width: 300px;
