--- a/public_html/css/car_card.css
+++ b/public_html/css/car_card.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     padding: 20px;
+    
 }
 
 .container2 {
@@ -241,9 +242,9 @@
 .con-like {
   --red: rgb(255, 50, 50);
   position: relative;
-  margin-left: 140px;
-  width: 30px;
-  height: 30px;
+  margin-left: 8.5rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 .con-like .like {
