Reviews and statistics in admin are done

--- a/public_html/css/admin.css
+++ b/public_html/css/admin.css
@@ -331,6 +331,22 @@ textarea:not(:disabled):hover {
     border-radius: 0.2rem;
 }
 
+.carFormInputfields{
+    margin-top: 1.5rem;
+    margin-left: 5rem;
+    width: 85%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    /* background: #000000bc; */
+    background: linear-gradient(160deg, #000000, #333333, #000000bc);
+
+    backdrop-filter: blur(1px);
+    border-radius: 0.2rem;
+}
+
 .userformLabels,
 .carformLabels {
     display: block;
@@ -364,6 +380,19 @@ select {
     background-color: rgba(255, 255, 255, 0);
     color: rgb(0, 0, 0);
 
+}
+
+.carInputFields{
+    width: 20%;
+    display: flex;
+    height: 27%;
+    margin-left: 6rem;
+    padding: 0.5rem;
+    padding-bottom: 4%;
+    margin-top: 5px;
+    border-radius: 0.2rem;
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(0, 0, 0);
 }
 
 /*error message validation*/
