--- a/public_html/css/user-profile.css
+++ b/public_html/css/user-profile.css
@@ -161,6 +161,41 @@ body::before {
   margin-left: 300px;
   position: fixed;
 }
+
+
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
+  background: transparent;
+  border: 1px solid var(--white);
+  color: var(--white);
+  padding: 10px;
+  border-radius: 5px;
+  font-family: var(--paragraphs_font);
+  border: none;
+}
+
+input[type="text"]::placeholder,
+input[type="email"]::placeholder,
+input[type="password"]::placeholder,
+textarea::placeholder {
+  color: var(--white);
+  opacity: 0.7;
+  border: 1px solid #131a5f94
+}
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 600px) {
   .info-section {
     width: 90%;
@@ -198,3 +233,6 @@ body::before {
     margin-top: 10px;
   }
 }
+
+
+
