--- a/public_html/css/user-profile.css
+++ b/public_html/css/user-profile.css
@@ -118,12 +118,13 @@ body::before {
 }
 
 .avatar {
-  width: 60px;
-  height: 60px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   margin-bottom: 10px;
   object-fit: cover;
   margin-right: 15px;
+  margin-top: 10px;
 }
 .info {
   display: flex;
@@ -134,6 +135,7 @@ body::before {
   font-size: 1.2em;
   font-weight: bold;
   color: var(--white);
+  margin-top: 0;
 }
 
 .username {
@@ -142,8 +144,9 @@ body::before {
 }
 
 .news {
-  font-size: 1em;
+  font-size: 1.2rem;
   color: var(--white);
+  margin-left: 20px;
 }
 
 .news-card:hover {
