--- a/public_html/css/platform.css
+++ b/public_html/css/platform.css
@@ -336,6 +336,7 @@ textarea {
 #savePostBtn:hover {
   background-color: var(--light_blue);
 }
+
 #errorMessage,
 #charWarning {
   color: red;
@@ -345,6 +346,73 @@ textarea {
   margin-bottom: 10px;
   margin-left: 7px;
 }
+
+#confirmModal {
+  position: fixed;
+  /* top: 0;
+  left: 0; */
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.39);
+  backdrop-filter: blur(10px);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#confirmModal .popup-content {
+  background: rgba(192, 190, 190, 0.229);
+  backdrop-filter: blur(40px);
+  border-right: 1px solid rgba(255, 255, 255, 0.18);
+  padding: 40px;
+  border-radius: 15px;
+  text-align: center;
+  width: 450px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+#confirmModal .popup-content p {
+  font-size: 24px;
+  color: var(--white);
+  margin-bottom: 20px;
+  font-family: var(--header_font);
+  letter-spacing: 1px;
+}
+
+#confirmModal .popup-content button {
+  margin: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#confirmModal .popup-content #confirmDeleteBtn {
+  background-color: #e74c3c;
+  color: #fff;
+  font-family: var(--header_font);
+  letter-spacing: 1px;
+}
+
+#confirmModal .popup-content #confirmDeleteBtn:hover {
+  background-color: #c0392b;
+}
+
+#confirmModal .popup-content #cancelDeleteBtn {
+  background-color: #bdc3c7;
+  color: #2c3e50;
+  font-family: var(--header_font);
+  letter-spacing: 1px;
+}
+
+#confirmModal .popup-content #cancelDeleteBtn:hover {
+  background-color: #95a5a6;
+}
+
+
 /* Responsive Styles */
 @media (max-width: 600px) {
   .container {
