update car operation & final statistics in admin dashboard & updated reviewStat method

--- a/public_html/css/admin.css
+++ b/public_html/css/admin.css
@@ -244,10 +244,10 @@ background-image: url('../media/admin-icon2.png');
 
 }
 
-.viewsChart,
-.plansChart,
-.usersChart,
-.personasChart {
+#reviewsChart,
+#loginsChart,
+#RecommendationChart,
+#personasChart {
     width: 60%;
     height: 60%;
 
