--- a/public_html/css/persona_test.css
+++ b/public_html/css/persona_test.css
@@ -247,7 +247,7 @@ body {
 
 /* Button style */
 .submit-button {
-    /* background-color: var(--powder_blue);
+    background-color: var(--powder_blue);
     color: var(--white);
     font-size: 18px;
     padding: 14px 30px;
@@ -256,19 +256,19 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1000; */
+    z-index: 1000;
 }
 
 /* Button hover effect */
 .submit-button:hover {
-    /* background-color: rgba(255, 255, 255, 0.241);
-    transform: scale(1.05); */
+    background-color: rgba(255, 255, 255, 0.241);
+    transform: scale(1.05);
 }
 
 /* Button active state */
 .submit-button:active {
-    /* background-color: rgba(255, 255, 255, 0.3);
-    transform: scale(1.02); */
+    background-color: rgba(255, 255, 255, 0.3);
+    transform: scale(1.02);
 }
 
 /* Make the last slide stand out a bit more */
